<resources>
    <string name="app_name">Explore Nepal</string>
    <string name="link_seeall"><a href="">See more</a></string>
    <string name="link_EXPLORE">See Nepal info</string>
    <string name="welcome_to_nepal">Welcome to Nepal</string>
    <string name="tourist_destinations">Tourist Destinations</string>
    <string name="food_and_homestay">Food and HomeStay</string>
    <string name="festivals">Festivals</string>
    <string name="welcome">Welcome,</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="image_of_google">image of google</string>
    <string name="festivalss">Festivals</string>
    <string name="explorenepal">Explore Nepal</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_to_continue">Sign Up to continue</string>
    <string name="full_name">Full Name</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="do_you_have_an_account_sign_in">Do you have an account? Sign In</string>
    <string name="todo2">TODO</string>
    <string name="kathmandu">Kathmandu</string>
    <string name="place_of_temples">Place of temples</string>

</resources>