<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/auth_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.03"
            android:text="@string/sign_in_to_continue"
            android:textColor="#FBC02D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressbaar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:text="@string/email"
        android:textColor="#68aebe"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_above="@+id/emaail"/>

    <EditText
        android:id="@+id/emaail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/forget"
        android:drawableStart="@drawable/email"
        android:drawablePadding="10dp"
        android:inputType="textEmailAddress"
        android:layout_above="@+id/npassword"
        android:autofillHints="emailAddress"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/npassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textColor="#68aebe"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_above="@+id/passwoord"/>

    <EditText
        android:id="@+id/passwoord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/forget"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="10dp"
        android:inputType="textPassword"
        android:layout_above="@+id/signIn"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="298dp"
        android:layout_height="51dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/button"
        android:text="@string/sign_in"
        android:textColor="#fff"
        android:layout_above="@+id/register"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:layout_above="@+id/others"
        android:textColor="#36415f"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/others"
        android:layout_above="@id/socialicons"
        android:text="@string/or_sign_in_with"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/socialicons"
        android:layout_alignParentBottom="true"
        android:gravity="center">


        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/google"
            android:contentDescription="@string/image_of_google" />
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/fb"
            android:contentDescription="@string/todo" />
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/twitter"
            android:contentDescription="@string/todo1" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/welcome_back"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold" />
</RelativeLayout>


